--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
 html body{
     background-color: #DC2F02 !important;
-    height: 100vh; 
+    height: 100vh;
+}
+*::-webkit-scrollbar {
+    display: none;
 }
 .background-black{
     background-color: #3E3939 !important;
@@ -62,4 +65,15 @@ html body{
 }
 .input-senha{
     border-right: none !important;
+}
+.chat-icone{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+.mini-screen{
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 80vh;
+    scrollbar-width: none;
 }
