--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
     --red: #DC2F02;
 }
 html body{
-    background-color: #DC2F02;
+    background-color: var(--red);
     height: 100dvh;
 }
 a{
@@ -39,21 +39,9 @@ a:hover{
 
 
 
-
-/* main{
-    box-sizing: content-box;
-} */
-/**/
-*::-webkit-scrollbar {
-    display: none;
-}
-
 .disable{
     pointer-events: none !important;
 }
-/* .b-1{
-    border-radius: 0.5rem !important;
-} */
 
 .icon-foto{
     width: 10rem;
@@ -72,11 +60,6 @@ a:hover{
     text-align: center;
     margin: 0rem;
     margin-top: 1rem;
-}
-.modal-border{
-    --bs-modal-inner-border-radius: unset;
-    border-top-left-radius: unset;
-    border-top-right-radius: unset;
 }
 .display-none{
     display: none;
@@ -106,6 +89,6 @@ a:hover{
 .mini-screen{
     overflow-y: auto;
     overflow-x: hidden;
-    height: 80vh;
+    min-height: 100%;
     scrollbar-width: none;
 }
